// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RandomCounter makes an API call and displays the value: idle 1`] = `
<div>
  Value: 5
</div>
`;

exports[`RandomCounter makes an API call and displays the value: loading 1`] = `
<div>
  Value: ...
</div>
`;

exports[`RandomCounter makes an API call and displays the value: loading 2`] = `
<div>
  Value: ...
</div>
`;
